--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -1,10 +1,17 @@
 {
   "parser": "@typescript-eslint/parser",
+  "env": {
+    "node": true,
+    "jest": true
+  },
   "extends": [
     "airbnb-typescript/base",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript"
   ],
   "plugins": ["@typescript-eslint", "prettier"],
   "settings": {
@@ -15,5 +22,9 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
+  },
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "arrow-body-style": ["error", "as-needed"]
   }
 }
