--- a/api/package.json
+++ b/api/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint . --ext .js,.ts",
-    "start": "concurrently -k -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold\" \"npm run watch-ts\" \"nodemon ./dist/index.js\"",
+    "start": "concurrently -k -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold\" \"yarn watch-ts\" \"nodemon ./dist/index.js\"",
     "watch-ts": "tsc -w",
     "build": "tsc",
-    "serve": "node ./dist/index.js"
+    "serve": "NODE_PATH=dist/ node ./dist/index.js",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migrate": "yarn typeorm migration:run"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,9 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/neuatech/restaurantordering-web#readme",
   "dependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
     "@types/koa": "^2.0.52",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json": "^2.0.18",
@@ -29,7 +34,9 @@
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "pg": "^7.12.1",
+    "typeorm": "^0.2.20"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.7.0",
