--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,9 @@ services:
       POSTGRES_USER: dev_user
       POSTGRES_PASSWORD: dev_pass
       POSTGRES_DB: db
+      PGDATA: /data/postgres
+    volumes:
+       - postgres:/data/postgres
   api:
     container_name: api
     build:
@@ -17,7 +20,12 @@ services:
       dockerfile: Dockerfile.dev
     environment:
       - PORT=8050
-      - DATABASE_URL=postgres://dev_user:dev_pass@db:5432/db
+      - TYPEORM_URL=postgres://dev_user:dev_pass@db:5432/db
+      - TYPEORM_CONNECTION=postgres
+      - TYPEORM_LOGGING=true
+      - TYPEORM_ENTITIES=./dist/entities/*.js
+      - TYPEORM_MIGRATIONS=./dist/migrations/*.js
+      - TYPEORM_MIGRATIONS_DIR=./dist/migrations
     volumes:
       - ./api/src:/app/src
       - ./api/dist:/app/dist
@@ -38,3 +46,20 @@ services:
       - "3000:3000"
     depends_on:
       - "api"
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+    volumes:
+       - pgadmin:/root/.pgadmin
+    ports:
+      - "${PGADMIN_PORT:-5050}:80"
+    restart: unless-stopped
+    depends_on:
+      - "db"
+
+volumes:
+  postgres:
+  pgadmin:
