feat: Create User table and migration

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,7 +6,9 @@
       "preserveConstEnums": true,
       "sourceMap": true,
       "allowSyntheticDefaultImports": true,
-      "outDir": "dist"
+      "outDir": "dist",
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
   "exclude": ["**/*.test.ts"],
