feat: Add runMigrations script and make target to execute

--- a/api/Makefile
+++ b/api/Makefile
@@ -2,3 +2,6 @@ CONTAINER_NAME=api
 
 bootstrap:
 	docker exec -it ${CONTAINER_NAME} yarn
+	
+migrate:
+	docker exec -it ${CONTAINER_NAME} yarn migrate
