feat: Add make targets for empty migrations and generating migrations

--- a/api/Makefile
+++ b/api/Makefile
@@ -5,3 +5,9 @@ bootstrap:
 	
 migrate:
 	docker exec -it ${CONTAINER_NAME} yarn migrate
+
+empty_migration:
+	docker exec -it ${CONTAINER_NAME} yarn migrate:empty
+
+generate_migrations:
+	docker exec -it ${CONTAINER_NAME} yarn migrate:generate
