--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -27,6 +27,8 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "arrow-body-style": ["error", "as-needed"],
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
+    "class-methods-use-this": "off"
   }
 }
