--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,6 +26,7 @@ services:
       - TYPEORM_ENTITIES=./dist/entities/*.js
       - TYPEORM_MIGRATIONS=./dist/migrations/*.js
       - TYPEORM_MIGRATIONS_DIR=./src/migrations
+      - PRIVATE_KEY=devprivatesigningkey
     volumes:
       - ./api/src:/app/src
       - ./api/dist:/app/dist
