feat: Add script for generating docs and serving them on the root

--- a/api/package.json
+++ b/api/package.json
@@ -4,11 +4,13 @@
   "description": "API package for Restaurant Ordering",
   "main": "index.js",
   "scripts": {
+    "docs:build": "apidoc -i src/controllers -o docs && mv docs dist/docs",
+    "clean": "rm -rf docs dist",
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "start": "concurrently -k -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold\" \"yarn watch-ts\" \"nodemon ./dist/index.js\"",
-    "watch-ts": "tsc -w",
-    "build": "tsc",
+    "watch-ts": "tsc -w && yarn docs:build",
+    "build": "yarn clean && tsc && yarn docs:build",
     "serve": "NODE_PATH=dist/ node ./dist/index.js",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migrate": "ts-node -r tsconfig-paths/register ./src/scripts/runMigrations.ts",
@@ -34,6 +36,8 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json": "^2.0.18",
     "@types/koa-logger": "^3.1.1",
+    "@types/koa-mount": "^4.0.0",
+    "@types/koa-static": "^4.0.1",
     "@types/koa__router": "^8.0.2",
     "@types/node": "^12.12.7",
     "jsonwebtoken": "^8.5.1",
@@ -41,6 +45,8 @@
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
     "pg": "^7.12.1",
     "typeorm": "^0.2.20"
   },
@@ -48,6 +54,7 @@
     "@types/jest": "^24.0.23",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
+    "apidoc": "^0.18.0",
     "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-typescript": "^6.1.0",
