--- a/api/package.json
+++ b/api/package.json
@@ -4,13 +4,16 @@
   "description": "API package for Restaurant Ordering",
   "main": "index.js",
   "scripts": {
-    "docs:build": "apidoc -i src/controllers -o docs && mv docs dist/docs",
-    "clean": "rm -rf docs dist",
+    "docs:build": "apidoc -i src/controllers -o docs",
+    "docs:move": "mkdir -p dist && mv docs/ dist/",
+    "docs:clean": "rm -rf docs dist/docs",
+    "docs": "yarn docs:clean && yarn docs:build && yarn docs:move",
+    "clean": "yarn docs:clean && rm -rf dist",
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "start": "concurrently -k -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold\" \"yarn watch-ts\" \"nodemon ./dist/index.js\"",
-    "watch-ts": "tsc -w && yarn docs:build",
-    "build": "yarn clean && tsc && yarn docs:build",
+    "watch-ts": "tsc -w",
+    "build": "yarn clean && tsc && yarn docs",
     "serve": "NODE_PATH=dist/ node ./dist/index.js",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migrate": "ts-node -r tsconfig-paths/register ./src/scripts/runMigrations.ts",
