--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -16,10 +16,16 @@
     "plugin:import/warnings",
     "plugin:import/typescript"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
   "settings": {
     "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
+      "@typescript-eslint/parser": [
+        ".ts",
+        ".tsx"
+      ]
     },
     "react": {
       "version": "detect"
@@ -31,7 +37,10 @@
   },
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "arrow-body-style": ["error", "as-needed"],
+    "arrow-body-style": [
+      "error",
+      "as-needed"
+    ],
     "react/prop-types": 0
   }
 }
