--- a/front/package.json
+++ b/front/package.json
@@ -13,9 +13,9 @@
     "typescript": "3.7.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --passWithNoTests",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,7 +34,6 @@
     ]
   },
   "devDependencies": {
-    "customize-cra": "^0.8.0",
     "eslint-config-airbnb-typescript": "^6.1.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
