--- a/api/package.json
+++ b/api/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "apidoc": "^0.18.0",
+    "apollo-server-koa": "^2.9.12",
     "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-typescript": "^6.1.0",
@@ -70,6 +71,7 @@
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.2",
     "tsconfig-paths": "^3.9.0",
+    "type-graphql": "^0.17.5",
     "typescript": "^3.7.2"
   }
 }
