change: Update Makefile to accept name param

--- a/api/Makefile
+++ b/api/Makefile
@@ -10,7 +10,7 @@ empty_migration:
 	docker exec -it ${CONTAINER_NAME} yarn migrate:empty
 
 generate_migrations:
-	docker exec -it ${CONTAINER_NAME} yarn migrate:generate
+	docker exec -it ${CONTAINER_NAME} yarn migrate:generate -n $(name)
 
 generate_docs:
 	docker exec -it ${CONTAINER_NAME} yarn docs
