--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -25,10 +25,11 @@
     "sourceType": "module"
   },
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "off",
     "arrow-body-style": ["error", "as-needed"],
     "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "import/no-cycle": "off"
   }
 }
