--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -30,6 +30,7 @@
     "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
     "class-methods-use-this": "off",
-    "import/no-cycle": "off"
+    "import/no-cycle": "off",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
