--- a/api/package.json
+++ b/api/package.json
@@ -34,15 +34,20 @@
     "@babel/preset-env": "^7.7.1",
     "@hapi/joi": "^16.1.7",
     "@koa/router": "^8.0.2",
+    "@types/node-fetch": "^2.5.4",
+    "apollo-server-koa": "^2.9.12",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
-    "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
     "pg": "^7.12.1",
+    "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.0",
+    "type-graphql": "^0.17.5",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.20",
     "typeorm-typedi-extensions": "^0.2.3"
@@ -55,14 +60,12 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json": "^2.0.18",
     "@types/koa-logger": "^3.1.1",
-    "@types/koa-mount": "^4.0.0",
     "@types/koa-static": "^4.0.1",
     "@types/koa__router": "^8.0.2",
     "@types/node": "^12.12.7",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "apidoc": "^0.18.0",
-    "apollo-server-koa": "^2.9.12",
     "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-typescript": "^6.1.0",
@@ -75,7 +78,6 @@
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.2",
     "tsconfig-paths": "^3.9.0",
-    "type-graphql": "^0.17.5",
     "typescript": "^3.7.2"
   }
 }
