--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,7 +11,7 @@
       "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.ts"],
+  "exclude": ["**/*.test.ts", "node_modules", "migrations"],
   "types": ["jest"],
   "typeRoots": ["./src/types", "node_modules/@types"]
 }
