--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.7.1",
     "@koa/router": "^8.0.2",
     "@types/node-fetch": "^2.5.4",
+    "@types/superagent": "^4.1.4",
     "apollo-server-koa": "^2.9.12",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
@@ -46,6 +47,7 @@
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.0",
+    "superagent": "^5.1.2",
     "type-graphql": "^0.17.5",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.20",
