--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,37 +13,29 @@ services:
       PGDATA: /data/postgres
     volumes:
        - postgres:/data/postgres
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-  api:
-    container_name: api
+    # healthcheck:
+    #   test: ["CMD-SHELL", "pg_isready -U postgres"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+  api-go:
+    container_name: api-go
     build:
-      context: ./api
+      context: ./api-go
       dockerfile: Dockerfile.dev
     environment:
       - PORT=8050
-      - TYPEORM_URL=postgres://dev_user:dev_pass@db:5432/db
-      - TYPEORM_CONNECTION=postgres
-      - TYPEORM_LOGGING=true
-      - TYPEORM_ENTITIES=./dist/entities/*.js
-      - TYPEORM_MIGRATIONS=./dist/migrations/*.js
-      - TYPEORM_MIGRATIONS_DIR=./src/migrations
       - PRIVATE_KEY=devprivatesigningkey
       - FACEBOOK_APP_ACCESS_TOKEN=457784034692995|25888d395a8b367feb7a079efaf5fca0
     volumes:
-      - ./api/src:/app/src
-      - ./api/dist:/app/dist
-      - /app/node_modules
+      - ./api-go/:/build/
     ports:
       - "8050:8050"
-    healthcheck:
-      test: ["CMD-SHELL", "curl localhost:8050 || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl localhost:8050 || exit 1"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
   front:
     container_name: front
     build:
@@ -57,12 +49,12 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - "api"
-    healthcheck:
-      test: ["CMD-SHELL", "curl localhost:3000 || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - "api-go"
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl localhost:3000 || exit 1"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
